Starting with power mockito.